# noise

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: Vcpkg.cmake
noise/: CMakeLists.txt
noise/include/noise/: noise.h  perlin.h  voronoi.h
noise/src/: perlin.cpp  voronoi.cpp
ports/litefx/: portfile.cmake  vcpkg.json
terrain/: CMakeLists.txt
terrain/include/terrain/: TerrainApp.h
terrain/shaders/: basic_fs.hlsl  basic_vs.hlsl
terrain/src/: TerrainApp.cpp  main.cpp
